# vergi-hesaplama

./: README.md
mahmut/: README.md  pyproject.toml
mahmut/src/galatasaray/: scraper.py
mahmut/src/vergi_hesaplama/: calculate.py  config.py  main.py
